# ultimate_ocr_cli

./: .gitignore  README.md  main.py  pyproject.toml  visualize.py
docs/: ULTIMATE_OCR_REST.md  server.md
server/: docker-compose.yml
