[project]
name = "ultimate-ocr-wrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pymupdf>=1.28.0",
    "requests>=2.34.2",
]

[project.scripts]
ultimate-ocr = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["main.py", "visualize.py"]
